--- a/.env.example
+++ b/.env.example
@@ -37,3 +37,13 @@ PUSHER_APP_CLUSTER=mt1
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+WECHAT_OFFICIAL_ACCOUNT_APPID=wxe8ab9cda9757a9de
+WECHAT_OFFICIAL_ACCOUNT_SECRET=8c2e104ed1fb352dcb76d45b245d035e
+WECHAT_OFFICIAL_ACCOUNT_TOKEN=E8_repair
+
+API_STANDARDS_TREE=
+API_SUBTYPE=
+API_PREFIX=
+API_VERSION=
+API_DEBUG=
