--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,9 @@
         "fideloper/proxy": "^4.0",
         "laravel/framework": "5.6.*",
         "laravel/tinker": "^1.0",
-        "overtrue/laravel-wechat": "~4.0"
+        "overtrue/laravel-wechat": "~4.0",
+        "guzzlehttp/guzzle": "~6.0",
+        "dingo/api": "2.0.0-alpha1"
     },
     "require-dev": {
         "filp/whoops": "^2.0",
